apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion '29.0.2'

    sourceSets {
        main {
            res.srcDirs =
                    [
                            'src/main/res/layout',
                            'src/main/res/layout/main',
                            'src/main/res/layout/currency_conversion',
                            'src/main/res/layout/inquire_ip',
                            'src/main/res/layout/phone_attribution',
                            'src/main/res/layout/today_in_history',
                            'src/main/res/layout/wifi_pwd_view',
                            'src/main/res/layout/app_info',
                            'src/main/res/layout/text_encryption',
                            'src/main/res/layout/clean_file',
                            'src/main/res/layout/show_sound_frequency',
                            'src/main/res/layout/garbage_classification',
                            'src/main/res/layout/global_outbreak',
                            'src/main/res/layout/dictionary',
                            'src/main/res'
                    ]
        }
    }

    defaultConfig {
        applicationId "com.kakacat.minitool"
        minSdkVersion 21
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    implementation 'com.android.support:design:29.1.1'
    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'com.github.pavlospt:circleview:1.3'
    implementation 'com.tyorikan:voice-recording-visualizer:1.0.3@aar'

}
